@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2007-10-31  Warren L. DeLano <warren@delsci.com>
+
+	* added a couple of new CGO examples
+	
 2007-10-30  Warren L. DeLano <warren@delsci.com>
 
 	* direct SDF output for single and multi-state objects
